# libB

./: CMakeLists.txt  Jenkinsfile  README.md  conanfile.py  dependent-projects.txt
src/: libB.cpp
